Fix the side menu on IE 11

--- a/src/RX.Nyss.Web/ClientApp/src/components/layout/Layout.module.scss
+++ b/src/RX.Nyss.Web/ClientApp/src/components/layout/Layout.module.scss
@@ -4,7 +4,7 @@
     flex-direction: row;
 
     .sideMenu {
-        flex: 0;
+        flex: 0 1 auto;
         display: flex;
     }
 
